--- a/yo/package.json
+++ b/yo/package.json
@@ -1,7 +1,9 @@
 {
   "name": "yo",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "grunt-contrib-imagemin": "~0.5.0"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-autoprefixer": "~0.4.0",
